sass/header/vtex.store-drawer.scss
@import 'sass/_media-queries.scss';


.openIconContainer {
  display: flex;
  align-items: center;
  height: 41px;
  width: 54px;
  justify-content: center;
  &::before {
    content: "";
    width: 35px;
    height: 38px;
    display: inline-block;
    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0z'/%3E%3Cg stroke='%236B4DC4' stroke-linecap='round'%3E%3Cpath d='M9 11.33548229h22M9 28.1590117h22M9 19.747247l21.9999998.00269223'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  }
  &::after {
    content: "|";
    font-size: 20px;
    height: 41px;
    padding-left: 2px;
    margin-right: -10px;

    @media screen and (max-width: 760px) {
      display: none;
    }
  }
  .menuIcon {
    display: none;
  }
}

.drawer--drawer-desktop {
  background: none;
  .drawerContent--drawer-desktop {
    padding: 12px 0 24px;
    background-color: #fff;
    @include mobile {
      position: relative;
    }
  }
}

.closeIconButton--drawer-desktop{
  @include mobile {
    position: absolute;
  }
}

.childrenContainer--drawer-desktop{
   margin-top: 42px;
}
.drawerContent--drawer-desktop {
  height: 100vh;
}

.drawerContent--drawer-mobile {
  height: 100vh;
}


@media screen and (max-width: 760px) {
  .openIconContainer--filterMobileDrawer {
    &::before {
      visibility: visible;
      content: url("assets/icons/icon_filter.svg");
      padding-right: 8px;
      display: inline-block;
      background: none;
      padding-top: 10px;
    }
  }

  .opened--filterMobileDrawer {
    width: 100% !important;
  }

  .closeIconButton--filterMobileDrawer {
    padding: 0;
    border-radius: 100px;
    position: absolute;
    top: 0;
    right: 0;
  }

  .closeIcon--filterMobileDrawer {
    height: 48px;
    width: 48px;
  }

  // .childrenContainer--filterMobileDrawer {
  //   margin-top: 40px;
  // }

  .drawerContent--filterMobileDrawer {
    margin-top: 50px;
    overflow-x: hidden;
    margin-right: 16px;

    &::-webkit-scrollbar {
      width: 6px;
      border-radius: 3px;
    }

    &::-webkit-scrollbar-track {
      background-color: #B8B8B8;
      border-radius: 3px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: #291660;
      border-radius: 3px;
    }
  }
}

